Backpack / EQ Rewrite
- Changed to backpack part of eq, added buttons.
- Still missing correct IDs.

--- a/idle.html
+++ b/idle.html
@@ -301,7 +301,11 @@
 			<div class = "task_window" id="equipment_window" style="display: none;">
 				<div style="display:flex; width: 100%; height: 70%;">
 					<!-- EQUIPPED -->
-					<div style="display:flex;flex-direction: column;width: 49%;height: 100%;">
+					<div style="display:flex;flex-direction: column;width: 49%;height: 100%;justify-content: center;">
+						<div style="display: flex;width: 100%;height: 5%;justify-content: center;align-items: center;">
+							EQUIPPED
+						</div>
+						<div class="space"></div>
 						<div style="display: flex; height: 10%; border-bottom:#000 solid 1px;">
 							<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Slot</span>
 							<span class="equipment_slot_info" style="width: 10%; background-color: #555">ilvl</span>
@@ -414,13 +418,17 @@
 					<div style="width: 2%;"></div>
 
 					<!-- BACKPACK -->
-					<div style="display:flex;flex-direction: column;width: 49%;height: 100%;">
+					<div style="display:flex;flex-direction: column;width: 49%;height: 100%;justify-content: center;">
+						<div style="display: flex;width: 100%;height: 5%;justify-content: center;align-items: center;">
+							BACKPACK
+						</div>
+						<div class="space"></div>
 						<div style="display: flex; height: 10%; border-bottom:#000 solid 1px;">
 							<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Slot</span>
 							<span class="equipment_slot_info" style="width: 10%; background-color: #555">ilvl</span>
-							<span class="equipment_slot_info" style="width: 15%; background-color: #646464">Base Power</span>
-							<span class="equipment_slot_info" style="width: 40%; background-color: #646464">Rarity</span>
-							<span class="equipment_slot_info" style="width: 15%; background-color: #555">Equip it!</span>
+							<span class="equipment_slot_info" style="width: 13%; background-color: #646464">Base Power</span>
+							<span class="equipment_slot_info" style="width: 34%; background-color: #555">Rarity</span>
+							<span class="equipment_slot_info" style="width: 23%; background-color: #646464">Equip it!</span>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -430,11 +438,14 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_helmet_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 13%; background-color: #646464">
 									<div id="equipment_helmet_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
 									<div id="equipment_helmet_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
+									<button id="equipment_helmet_equip_button">EQUIP</button>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_helmet_overlay"></div>
@@ -447,11 +458,14 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_body_armour_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_body_armour" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" id="equipment_slot_info_body_armour" style="width: 13%; background-color: #646464">
 									<div id="equipment_body_armour_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
 									<div id="equipment_body_armour_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
+									<button id="equipment_body_armour_equip_button">EQUIP</button>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_body_armour_overlay"></div>
@@ -464,11 +478,14 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_gloves_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 13%; background-color: #646464">
 									<div id="equipment_gloves_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
 									<div id="equipment_gloves_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
+									<button id="equipment_gloves_equip_button">EQUIP</button>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_gloves_overlay"></div>
@@ -481,11 +498,14 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_boots_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 13%; background-color: #646464">
 									<div id="equipment_boots_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
 									<div id="equipment_boots_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
+									<button id="equipment_boots_equip_button">EQUIP</button>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_boots_overlay"></div>
@@ -498,11 +518,14 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_weapon_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 13%; background-color: #646464">
 									<div id="equipment_weapon_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
 									<div id="equipment_weapon_name" style="z-index: 2;">Fists</div>
+								</span>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
+									<button id="equipment_weapon_equip_button">EQUIP</button>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_weapon_overlay"></div>
