--- a/idle.html
+++ b/idle.html
@@ -310,8 +310,8 @@
 							<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Slot</span>
 							<span class="equipment_slot_info" style="width: 10%; background-color: #555">ilvl</span>
 							<span class="equipment_slot_info" style="width: 15%; background-color: #646464">Base Power</span>
-							<span class="equipment_slot_info" style="width: 15%; background-color: #555">Total Power</span>
-							<span class="equipment_slot_info" style="width: 40%; background-color: #646464">Rarity</span>
+							<span class="equipment_slot_info" style="width: 40%; background-color: #555">Rarity</span>
+							<span class="equipment_slot_info" style="width: 15%; background-color: #646464">Total Power</span>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -324,11 +324,11 @@
 								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 15%; background-color: #646464">
 									<div id="equipment_helmet_base_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 15%; background-color: #555">
-									<div id="equipment_helmet_total_power" style="z-index: 2;">0</div>
-								</span>
-								<span class="equipment_slot_info" style="width: 40%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
 									<div id="equipment_helmet_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 15%; background-color: #646464">
+									<div id="equipment_helmet_total_power" style="z-index: 2;">0</div>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_helmet_overlay"></div>
@@ -344,11 +344,11 @@
 								<span class="equipment_slot_info" id="equipment_slot_info_bodyArmour" style="width: 15%; background-color: #646464">
 									<div id="equipment_bodyArmour_base_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_bodyArmour" style="width: 15%; background-color: #555">
-									<div id="equipment_bodyArmour_total_power" style="z-index: 2;">0</div>
-								</span>
-								<span class="equipment_slot_info" style="width: 40%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
 									<div id="equipment_bodyArmour_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" id="equipment_slot_info_bodyArmour" style="width: 15%; background-color: #646464">
+									<div id="equipment_bodyArmour_total_power" style="z-index: 2;">0</div>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_bodyArmour_overlay"></div>
@@ -364,11 +364,11 @@
 								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 15%; background-color: #646464">
 									<div id="equipment_gloves_base_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 15%; background-color: #555">
-									<div id="equipment_gloves_total_power" style="z-index: 2;">0</div>
-								</span>
-								<span class="equipment_slot_info" style="width: 40%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
 									<div id="equipment_gloves_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 15%; background-color: #646464">
+									<div id="equipment_gloves_total_power" style="z-index: 2;">0</div>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_gloves_overlay"></div>
@@ -384,11 +384,11 @@
 								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 15%; background-color: #646464">
 									<div id="equipment_boots_base_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 15%; background-color: #555">
-									<div id="equipment_boots_total_power" style="z-index: 2;">0</div>
-								</span>
-								<span class="equipment_slot_info" style="width: 40%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
 									<div id="equipment_boots_name" style="z-index: 2;">None</div>
+								</span>
+								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 15%; background-color: #646464">
+									<div id="equipment_boots_total_power" style="z-index: 2;">0</div>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_boots_overlay"></div>
@@ -404,11 +404,11 @@
 								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 15%; background-color: #646464">
 									<div id="equipment_weapon_base_power" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 15%; background-color: #555">
-									<div id="equipment_weapon_total_power" style="z-index: 2;">0</div>
-								</span>
-								<span class="equipment_slot_info" style="width: 40%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
 									<div id="equipment_weapon_name" style="z-index: 2;">Fists</div>
+								</span>
+								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 15%; background-color: #646464">
+									<div id="equipment_weapon_total_power" style="z-index: 2;">0</div>
 								</span>
 							</div>
 							<div class="equipment_slot_overlay" id="equipment_weapon_overlay"></div>
@@ -436,19 +436,19 @@
 									<div style="z-index: 2;">Helmet: </div>
 								</span>
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
-									<div id="equipment_helmet_level" style="z-index: 2;">0</div>
+									<div id="equipment_backpack_helmet_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 13%; background-color: #646464">
-									<div id="equipment_helmet_power" style="z-index: 2;">0</div>
+								<span class="equipment_slot_info" id="equipment_slot_info_backpack_helmet" style="width: 13%; background-color: #646464">
+									<div id="equipment_backpack_helmet_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
-									<div id="equipment_helmet_name" style="z-index: 2;">None</div>
+									<div id="equipment_backpack_helmet_name" style="z-index: 2;">None</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
-									<button id="equipment_helmet_equip_button">EQUIP</button>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #646464">
+									<button id="equipment_backpack_helmet_equip_button" style="z-index: 2;">EQUIP</button>
 								</span>
 							</div>
-							<div class="equipment_slot_overlay" id="equipment_helmet_overlay"></div>
+							<div class="equipment_slot_overlay" id="equipment_backpack_helmet_overlay"></div>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -456,19 +456,19 @@
 									<div style="z-index: 2;">Body Armour: </div>
 								</span>
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
-									<div id="equipment_body_armour_level" style="z-index: 2;">0</div>
+									<div id="equipment_backpack_bodyArmour_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_body_armour" style="width: 13%; background-color: #646464">
-									<div id="equipment_body_armour_power" style="z-index: 2;">0</div>
+								<span class="equipment_slot_info" id="equipment_slot_info_backpack_bodyArmour" style="width: 13%; background-color: #646464">
+									<div id="equipment_backpack_bodyArmour_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
-									<div id="equipment_body_armour_name" style="z-index: 2;">None</div>
+									<div id="equipment_backpack_bodyArmour_name" style="z-index: 2;">None</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
-									<button id="equipment_body_armour_equip_button">EQUIP</button>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #646464">
+									<button id="equipment_backpack_bodyArmour_equip_button" style="z-index: 2;">EQUIP</button>
 								</span>
 							</div>
-							<div class="equipment_slot_overlay" id="equipment_body_armour_overlay"></div>
+							<div class="equipment_slot_overlay" id="equipment_backpack_bodyArmour_overlay"></div>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -476,19 +476,19 @@
 									<div style="z-index: 2;">Gloves: </div>
 								</span>
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
-									<div id="equipment_gloves_level" style="z-index: 2;">0</div>
+									<div id="equipment_backpack_gloves_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 13%; background-color: #646464">
-									<div id="equipment_gloves_power" style="z-index: 2;">0</div>
+								<span class="equipment_slot_info" id="equipment_slot_info_backpack_gloves" style="width: 13%; background-color: #646464">
+									<div id="equipment_backpack_gloves_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
-									<div id="equipment_gloves_name" style="z-index: 2;">None</div>
+									<div id="equipment_backpack_gloves_name" style="z-index: 2;">None</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
-									<button id="equipment_gloves_equip_button">EQUIP</button>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #646464">
+									<button id="equipment_backpack_gloves_equip_button" style="z-index: 2;">EQUIP</button>
 								</span>
 							</div>
-							<div class="equipment_slot_overlay" id="equipment_gloves_overlay"></div>
+							<div class="equipment_slot_overlay" id="equipment_backpack_gloves_overlay"></div>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -496,19 +496,19 @@
 									<div style="z-index: 2;">Boots: </div>
 								</span>
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
-									<div id="equipment_boots_level" style="z-index: 2;">0</div>
+									<div id="equipment_backpack_boots_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 13%; background-color: #646464">
-									<div id="equipment_boots_power" style="z-index: 2;">0</div>
+								<span class="equipment_slot_info" id="equipment_slot_info_backpack_boots" style="width: 13%; background-color: #646464">
+									<div id="equipment_backpack_boots_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
-									<div id="equipment_boots_name" style="z-index: 2;">None</div>
+									<div id="equipment_backpack_boots_name" style="z-index: 2;">None</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
-									<button id="equipment_boots_equip_button">EQUIP</button>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #646464">
+									<button id="equipment_backpack_boots_equip_button" style="z-index: 2;">EQUIP</button>
 								</span>
 							</div>
-							<div class="equipment_slot_overlay" id="equipment_boots_overlay"></div>
+							<div class="equipment_slot_overlay" id="equipment_backpack_boots_overlay"></div>
 						</div>
 						<div class="equipment_slot" style="position: relative;">
 							<div class="equipment_slot_content">
@@ -516,19 +516,19 @@
 									<div style="z-index: 2;">Weapon: </div>
 								</span>
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
-									<div id="equipment_weapon_level" style="z-index: 2;">0</div>
+									<div id="equipment_backpack_weapon_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 13%; background-color: #646464">
-									<div id="equipment_weapon_power" style="z-index: 2;">0</div>
+								<span class="equipment_slot_info" id="equipment_slot_info_backpack_weapon" style="width: 13%; background-color: #646464">
+									<div id="equipment_backpack_weapon_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
-									<div id="equipment_weapon_name" style="z-index: 2;">Fists</div>
+									<div id="equipment_backpack_weapon_name" style="z-index: 2;">Fists</div>
 								</span>
-								<span class="equipment_slot_info" style="width: 23%; background-color: #555">
-									<button id="equipment_weapon_equip_button">EQUIP</button>
+								<span class="equipment_slot_info" style="width: 23%; background-color: #646464">
+									<button id="equipment_backpack_weapon_equip_button" style="z-index: 2;">EQUIP</button>
 								</span>
 							</div>
-							<div class="equipment_slot_overlay" id="equipment_weapon_overlay"></div>
+							<div class="equipment_slot_overlay" id="equipment_backpack_weapon_overlay"></div>
 						</div>
 					</div>
 				</div>
