Backpack / EQ Rewrite
- Info about total power of items now is in Total Power column of equipped items.
- Added swapping items between backpack and EQ.

--- a/idle.html
+++ b/idle.html
@@ -321,7 +321,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_helmet_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_helmet" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
 									<div id="equipment_helmet_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
@@ -341,7 +341,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_bodyArmour_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_bodyArmour" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
 									<div id="equipment_bodyArmour_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
@@ -361,7 +361,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_gloves_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_gloves" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
 									<div id="equipment_gloves_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
@@ -381,7 +381,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_boots_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_boots" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
 									<div id="equipment_boots_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
@@ -401,7 +401,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_weapon_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_weapon" style="width: 15%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
 									<div id="equipment_weapon_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 40%; background-color: #555">
@@ -438,7 +438,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_backpack_helmet_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_backpack_helmet" style="width: 13%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 13%; background-color: #646464">
 									<div id="equipment_backpack_helmet_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
@@ -458,7 +458,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_backpack_bodyArmour_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_backpack_bodyArmour" style="width: 13%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 13%; background-color: #646464">
 									<div id="equipment_backpack_bodyArmour_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
@@ -478,7 +478,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_backpack_gloves_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_backpack_gloves" style="width: 13%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 13%; background-color: #646464">
 									<div id="equipment_backpack_gloves_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
@@ -498,7 +498,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_backpack_boots_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_backpack_boots" style="width: 13%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 13%; background-color: #646464">
 									<div id="equipment_backpack_boots_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
@@ -518,7 +518,7 @@
 								<span class="equipment_slot_info" style="width: 10%; background-color: #555">
 									<div id="equipment_backpack_weapon_level" style="z-index: 2;">0</div>
 								</span>
-								<span class="equipment_slot_info" id="equipment_slot_info_backpack_weapon" style="width: 13%; background-color: #646464">
+								<span class="equipment_slot_info" style="width: 13%; background-color: #646464">
 									<div id="equipment_backpack_weapon_base_power" style="z-index: 2;">0</div>
 								</span>
 								<span class="equipment_slot_info" style="width: 34%; background-color: #555">
