--- a/idle.html
+++ b/idle.html
@@ -787,17 +787,17 @@
 			<!-- Buttons at the bottom of the screen -->
 			<div id = "control_buttons">
 				<span style="display: flex; width: 50%; pointer-events: none;">
-					<button id="battleButton" style="display: none;">BATTLE</button>
-					<button id="questingButton">QUESTS</button>
-					<button id="recoverHealthButton" style="display: none;">HEAL</button>
-					<button id="trainingButton" style="display: none;">TRAIN</button>
-					<button id="dungeonButton" style="display: none;">DUNGEONS</button>
-					<button id="fishingButton" style="display: none;">FISHING</button>
+					<button id="battleButton" style="display: none;" class="border2pxBlack">BATTLE</button>
+					<button id="questingButton" class="border2pxBlack">QUESTS</button>
+					<button id="recoverHealthButton" style="display: none;" class="border2pxBlack">HEAL</button>
+					<button id="trainingButton" style="display: none;" class="border2pxBlack">TRAIN</button>
+					<button id="dungeonButton" style="display: none;" class="border2pxBlack">DUNGEONS</button>
+					<button id="fishingButton" style="display: none;" class="border2pxBlack">FISHING</button>
 				</span>
 				<span style="display: flex; flex-direction: row-reverse; width: 50%; pointer-events: none;">
-					<button id="equipmentButton" style="display: none;">EQ</button>
-					<button id="shopButton" style="display: none;">SHOPS</button>
-					<button id="smithButton" style="display: none;">SMITH</button>
+					<button id="equipmentButton" style="display: none;" class="border2pxBlack">EQ</button>
+					<button id="shopButton" style="display: none;" class="border2pxBlack">SHOPS</button>
+					<button id="smithButton" style="display: none;" class="border2pxBlack">SMITH</button>
 				</span>
 			</div>
 		</div>
