--- a/idle.html
+++ b/idle.html
@@ -3,7 +3,7 @@
 	<title>Not MMO, Still RPG</title>
 
 	<!-- Idle game made by Piotr "Xeiciu" Lisowski 
-		currently game can be played at xeiciu.com/idle.html
+		currently game can be played at xeiciu.com/idle
 
 		No, I'm not web dev but I am a game dev... I will keep updating it as long as I won't get bored xD
 	-->
